--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "xo-connect": "^2.1.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
